--- a/DiffLogo/DiffLogo_tests.Rmd
+++ b/DiffLogo/DiffLogo_tests.Rmd
@@ -8,6 +8,7 @@ always_allow_html: true
 
 Goal - test some issues with DiffLogo.  
 
+Filed an issue here: https://github.com/mgledi/DiffLogo/issues/31
 
 # Load libraries
 
